--- a/index.html
+++ b/index.html
@@ -181,10 +181,9 @@ console.log('$1: ', $2);
                 </div>
             </div>
 
-            <hr>
-
             <footer>
-                <p>&copy; reimagin8d 2017</p>
+                <hr>
+                <a href="http://reimagin8d.com" target="_blank">&copy; reimagin8d 2017</a>
             </footer>
         </div> <!-- /container -->
 
