--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand active" href="index.html">Snippets</a>
+                    <a class="navbar-brand active" href="index.html">
+                        <!-- <img class="img-responsive" src="img/logo.png" alt="Code Editor Snippet Converter"> -->
+                        Snippets</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right" role="form">
