--- a/about.html
+++ b/about.html
@@ -52,6 +52,11 @@
 
                 </div>
             </div>
+
+            <footer>
+                <hr>
+                <a href="http://reimagin8d.com" target="_blank">&copy; reimagin8d 2017</a>
+            </footer>
         </div>
     </body>
 
