--- a/details.html
+++ b/details.html
@@ -3,7 +3,6 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -47,9 +46,9 @@
 
     <body data-spy="scroll" data-target="#sidebar">
         <div id="details-container" class="container">
-            <h1>Details</h1>
+            <!-- <h1>Details</h1> -->
             <div class="row">
-                <div class='col-md-9'>
+                <div class='col-md-10'>
                     <div id="atom">
                         <h2>Atom</h2>
                     </div>
@@ -67,7 +66,7 @@
                     </div>
                 </div>
 
-                <div id="sidebar" class='col-md-3'>
+                <div id="sidebar" class='col-md-2 hidden-xs'>
                     <ul class="nav nav-pills nav-stacked affix">
                         <li id="nav-atom"><a href="#atom" data-scroll>Atom</a></li>
                         <li id="nav-brackets"><a href="#brackets" data-scroll>Brackets</a></li>
@@ -76,6 +75,12 @@
                     </ul>
                 </div>
             </div>
+
+            <footer>
+                <hr>
+                <a href="http://reimagin8d.com" target="_blank">&copy; reimagin8d 2017</a>
+            </footer>
+
         </div>
     </body>
 
