--- a/details.html
+++ b/details.html
@@ -48,7 +48,7 @@
         <div id="details-container" class="container">
             <!-- <h1>Details</h1> -->
             <div class="row">
-                <div class='col-md-10'>
+                <div id="details-content" class="col-md-10">
                     <div id="atom">
                         <h2>Atom</h2>
                     </div>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
 
-                <div id="sidebar" class='col-md-2 hidden-xs'>
+                <div id="sidebar" class="col-md-2 hidden-xs">
                     <ul class="nav nav-pills nav-stacked affix">
                         <li id="nav-atom"><a href="#atom" data-scroll>Atom</a></li>
                         <li id="nav-brackets"><a href="#brackets" data-scroll>Brackets</a></li>
