Added share-overlay to home page.

--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
                             <!-- Allow user to select To text editor -->
                             <div class="form-group">
                                 <textarea name="convert_from_text" rows="20"><snippet>
-	<content><![CDATA[
-console.log('$1: ', $2);
-]]></content>
-	<tabTrigger>log</tabTrigger>
-	<scope>source.js</scope>
-	<description>Log to the Console</description>
-</snippet></textarea>
+                                	<content><![CDATA[
+                                console.log('$1: ', $2);
+                                ]]></content>
+                                	<tabTrigger>log</tabTrigger>
+                                	<scope>source.js</scope>
+                                	<description>Log to the Console</description>
+                                </snippet></textarea>
                             </div>
                         </div>
 
@@ -181,6 +181,9 @@ console.log('$1: ', $2);
                 </div>
             </div>
 
+            <div class="row share-overlay">
+
+            </div>
             <footer>
                 <hr>
                 <a href="http://reimagin8d.com" target="_blank">&copy; reimagin8d 2017</a>
