--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand active" href="index.html">
-                        <!-- <img class="img-responsive" src="img/logo.png" alt="Code Editor Snippet Converter"> -->
-                        Snippets</a>
+                    <a class="navbar-brand active" href="index.html">Snippets</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right" role="form">
@@ -146,13 +144,13 @@
                             <!-- Allow user to select To text editor -->
                             <div class="form-group">
                                 <textarea name="convert_from_text" rows="20"><snippet>
-	<content><![CDATA[
-console.log('$1: ', $2);
-]]></content>
-	<tabTrigger>log</tabTrigger>
-	<scope>source.js</scope>
-	<description>Log to the Console</description>
-</snippet></textarea>
+                                	<content><![CDATA[
+                                console.log('$1: ', $2);
+                                ]]></content>
+                                	<tabTrigger>log</tabTrigger>
+                                	<scope>source.js</scope>
+                                	<description>Log to the Console</description>
+                                </snippet></textarea>
                             </div>
                         </div>
 
@@ -183,6 +181,9 @@ console.log('$1: ', $2);
                 </div>
             </div>
 
+            <div class="row share-overlay">
+
+            </div>
             <footer>
                 <hr>
                 <a href="http://reimagin8d.com" target="_blank">&copy; reimagin8d 2017</a>
@@ -191,7 +192,9 @@ console.log('$1: ', $2);
 
 
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
+
         <script src="js/vendor/bootstrap.min.js"></script>
+
         <script src="js/main.js"></script>
 
 
