Added facebook and twitter head data to all pages.

--- a/about.html
+++ b/about.html
@@ -7,10 +7,25 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>About - Snippets</title>
+    <title>About | Snippets</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+    <!--FaceBook-->
+    <meta property="og:url" content="http://snip.local:8888"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="About | Snippets"/>
+    <meta property="og:image" content="http://snip.local:8888/img/logo.png"/>
+    <meta property="og:site_name" content="Snippets"/>
+    <meta property="og:description" content="A snippet converter. Moving to a new code editor?  Convert your code snippets quickly and easily!"/>
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@reimagind8d" />
+    <meta name="twitter:title" content="About | Snippets" />
+    <meta name="twitter:description" content="A snippet converter. Moving to a new code editor?  Convert your code snippets quickly and easily!" />
+    <meta name="twitter:image" content="http://snip.local:8888/img/logo.png" />
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
