--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Home - Snippets</title>
-        <meta name="description" content="">
+        <title>Home | Snippets</title>
+        <meta name="description" content="A snippet converter. Moving to a new code editor?  Convert your code snippets quickly and easily!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+        <!--FaceBook-->
+        <meta property="og:url" content="http://snip.local:8888"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:title" content="Home | Snippets"/>
+        <meta property="og:image" content="http://snip.local:8888/img/logo.png"/>
+        <meta property="og:site_name" content="Snippets"/>
+        <meta property="og:description" content="A snippet converter. Moving to a new code editor?  Convert your code snippets quickly and easily!"/>
+
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:site" content="@reimagind8d" />
+        <meta name="twitter:title" content="Home | Snippets" />
+        <meta name="twitter:description" content="A snippet converter. Moving to a new code editor?  Convert your code snippets quickly and easily!" />
+        <meta name="twitter:image" content="http://snip.local:8888/img/logo.png" />
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <style>
@@ -144,13 +159,13 @@
                             <!-- Allow user to select To text editor -->
                             <div class="form-group">
                                 <textarea name="convert_from_text" rows="20"><snippet>
-                                	<content><![CDATA[
-                                console.log('$1: ', $2);
-                                ]]></content>
-                                	<tabTrigger>log</tabTrigger>
-                                	<scope>source.js</scope>
-                                	<description>Log to the Console</description>
-                                </snippet></textarea>
+	<content><![CDATA[
+console.log('$1: ', $2);
+]]></content>
+	<tabTrigger>log</tabTrigger>
+	<scope>source.js</scope>
+	<description>Log to the Console</description>
+</snippet></textarea>
                             </div>
                         </div>
 
@@ -181,15 +196,15 @@
                 </div>
             </div>
 
-            <div class="row share-overlay">
-
-            </div>
             <footer>
                 <hr>
                 <a href="http://reimagin8d.com" target="_blank">&copy; reimagin8d 2017</a>
             </footer>
         </div> <!-- /container -->
 
+        <div class="share-overlay">
+
+        </div>
 
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
 
