--- a/index.html
+++ b/index.html
@@ -203,7 +203,13 @@ console.log('$1: ', $2);
         </div> <!-- /container -->
 
         <div class="share-overlay">
-
+            <div class="container page-container">
+                <div class="row">
+                    <div class='col-sm-3'>
+                        <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a></div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
@@ -212,6 +218,14 @@ console.log('$1: ', $2);
 
         <script src="js/main.js"></script>
 
-
+        <!-- Facebook share button script -->
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10&appId=228144774384276";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
     </body>
 </html>
