Share overlay setup complete.

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                             </div>
 
                             <!-- Allow user to select To text editor -->
-                            <div class="form-group">
-                                <textarea name="convert_from_text" rows="20"><snippet>
+                            <div id="from-fg" class="form-group">
+                                <textarea name="convert_from_text" rows="20" aria-describedby="helpBlock1"><snippet>
 	<content><![CDATA[
 console.log('$1: ', $2);
 ]]></content>
@@ -166,12 +166,14 @@ console.log('$1: ', $2);
 	<scope>source.js</scope>
 	<description>Log to the Console</description>
 </snippet></textarea>
+                            <span id="helpBlock1" class="help-block">Invalid format for selected editor.</span>
+
                             </div>
                         </div>
 
                         <div class='col-sm-6'>
                             <!-- Allow user to select To text editor -->
-                            <div class="form-group">
+                            <div id="from-fg" class="form-group">
                                 <label for="convert_to" class="text-blue title">TO</label>
                                 <select id="convert-to" class="form-control" name="convert_to" required>
                                     <option value=""></option>
@@ -205,8 +207,25 @@ console.log('$1: ', $2);
         <div class="share-overlay">
             <div class="container page-container">
                 <div class="row">
-                    <div class='col-sm-3'>
+                    <div class='col-sm-4'>
                         <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a></div>
+                    </div>
+                    <div class='col-sm-4'>
+                        <a class="twitter-share-button"
+                        href="https://twitter.com/intent/tweet?text=Convert%20your%20code%20editor%20snippets%20with%20Snippets%20by%20reimagin8d"
+                        target="_blank"
+                        data-size="large">
+                      Tweet</a>
+                    </div>
+
+                    <div class='col-sm-4'>
+                        <a href="#">Pintrest</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class='col-xs-12' style="margin-top: 15px">
+                        <a class="dismiss-share btn btn-success" href="#">Close</a>
                     </div>
                 </div>
             </div>
@@ -217,6 +236,20 @@ console.log('$1: ', $2);
         <script src="js/vendor/bootstrap.min.js"></script>
 
         <script src="js/main.js"></script>
+
+        <script>
+            // Share Overlay Dismiss
+            $('.dismiss-share').on('click', function(e)
+            {
+                e.preventDefault();
+
+                console.log('Dismiss share clicked!');
+
+                $('.share-overlay').toggle();
+                $('body').removeClass('modal-open');
+
+            });
+        </script>
 
         <!-- Facebook share button script -->
         <div id="fb-root"></div>
