Added validation for Atom parsing.

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ console.log('$1: ', $2);
 	<scope>source.js</scope>
 	<description>Log to the Console</description>
 </snippet></textarea>
-                            <span id="helpBlock1" class="help-block">Invalid format for selected editor.</span>
+                            <span class="error-block text-danger">Invalid format for selected editor.</span>
 
                             </div>
                         </div>
