Updated link highlighting for error text.

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ console.log('$1: ', $2);
 	<scope>source.js</scope>
 	<description>Log to the Console</description>
 </snippet></textarea>
-                            <span class="error-block text-danger">Invalid format for selected editor. <a href="details.html" target="_">For more info on formatting.</a></span>
+                            <span class="error-block text-red">Invalid format for selected editor. <a class="text-ltgrey hover-red" href="details.html" target="_blank">For more info on formatting.</a></span>
 
                             </div>
                         </div>
