Added content to Details page.

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         </nav>
 
 
-        <div class="container page-container">
+        <div id="home-container" class="container page-container">
 
-            <div class="row" style="min-height: 100vh;">
+            <div class="row">
                 <div class='col-xs-12'>
                     <!-- FORM -->
                     <form id="converter-form" class="form" action="#" method="post">
@@ -233,10 +233,9 @@ console.log('$1: ', $2);
         </div>
 
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
-
         <script src="js/vendor/bootstrap.min.js"></script>
-
         <script src="js/main.js"></script>
+        <script src="js/vendor/retina.js"></script>
 
         <script>
             // Share Overlay Dismiss
