--- a/details.html
+++ b/details.html
@@ -32,7 +32,7 @@
             {
                 padding-top: 50px;
                 padding-bottom: 20px;
-                background-color: white;
+                /*background-color: white;*/
             }
         </style>
         <!-- <link rel="stylesheet" href="css/bootstrap-theme.min.css"> -->
@@ -62,8 +62,8 @@
     </nav>
 
     <body data-spy="scroll" data-target="#sidebar">
-        <div id="details-container" class="container">
-            <!-- <h1>Details</h1> -->
+        <div id="details-container" class="container page-container">
+            <h1>Details</h1>
             <div class="row">
                 <div id="details-content" class="col-md-10">
                     <div id="atom" class="details-section">
@@ -142,6 +142,7 @@ console.log('$1: ', $2);
     <script src="js/vendor/jquery-1.11.2.min.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/vendor/retina.js"></script>
 
     <script>
     /*Scroll Spy*/
