--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
         <style>
             body {
-                /*padding-top: 50px;
-                padding-bottom: 20px;*/
+                padding-top: 50px;
+                padding-bottom: 20px;
                 background-color: #222;
             }
         </style>
@@ -46,7 +46,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
+        <nav class="navbar navbar-expand-lg navbar-dark back-black fixed-top" role="navigation">
             <div class="container">
                 <a class="navbar-brand active order-1" href="index.html">Snippets</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-collapse" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -189,13 +189,16 @@ console.log('$1: ', $2);
                 </div>
             </div>
 
-            <footer>
-                <hr>
-                <a href="http://reimagin8d.com" target="_blank">&copy; reimagin8d 2017</a>
-            </footer>
+
         </div> <!-- /container -->
 
-        <div class="share-overlay">
+        <footer>
+            <div class="container">
+                <hr>
+                <a href="http://reimagin8d.com" target="_blank">&copy; reimagin8d 2017</a>
+            </div>
+        </footer>
+        <!-- <div class="share-overlay">
             <div class="container page-container">
                 <div class="row">
                     <div class='col-sm-4'>
@@ -220,7 +223,7 @@ console.log('$1: ', $2);
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- <script src="js/vendor/jquery-1.11.2.min.js"></script> -->
 
