--- a/about.html
+++ b/about.html
@@ -42,25 +42,20 @@
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
+    <nav class="navbar navbar-expand-lg navbar-dark back-black fixed-top" role="navigation">
+        <div class="container">
+            <a class="navbar-brand active order-1" href="index.html">Snippets</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-collapse" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Snippets</a>
+            <div class="collapse navbar-collapse" id="nav-collapse">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="details.html">Details</a>
+                    <a class="nav-item nav-link active" href="about.html">About</a>
+                </div>
+            </div>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right" role="form">
-                <li><a href="details.html">Details</a></li>
-                <li class="active"><a href="about.html">About</a></li>
-            </ul>
-        </div><!--/.navbar-collapse -->
-    </div>
-</nav>
+    </nav>
     <body>
         <div id="about-container" class="container page-container">
             <h1>About</h1>
