--- a/index.html
+++ b/index.html
@@ -162,14 +162,16 @@ console.log('$1: ', $2);
 </snippet></textarea>
                     <span class="error-block text-red">Invalid format for selected editor. <a class="text-ltgrey hover-red" href="details.html" target="_blank">For more info on formatting.</a></span>
 
-                    <span id="format-atom">
+                    <span id="format-atom" class="format">
+                        <p class="text-ltgrey">Example Format</p>
                         <pre class="text-green">'.source.js':
     'console.log':
     'prefix': 'log'
     'body': 'console.log(${1:"crash"});$2'</pre>
                     </span>
 
-                    <span id="format-atom">
+                    <span id="format-atom" class="format">
+                        <p class="text-ltgrey">Format Example</p>
                         <pre class="text-green">{"For Loop": {
         "prefix": "for",
         "body": [
