Card integration and formatting updates complete.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
 
                     <div class="form-group scope-select">
-                        <label for="scope_from">Scope/Source</label>
+                        <label class="text-white" for="scope_from">Scope/Source</label>
                         <select class="form-control" name="scope_from">
                             <option value=""></option>
                             <option value="source.actionscript.2">ActionScript: source.actionscript.2</option>
