--- a/about.html
+++ b/about.html
@@ -44,12 +44,12 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark back-black fixed-top" role="navigation">
         <div class="container">
-            <a class="navbar-brand active order-1" href="index.html">Snippets</a>
+            <a class="navbar-brand active" href="index.html">Snippets</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-collapse" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="nav-collapse">
-                <div class="navbar-nav">
+                <div class="navbar-nav ml-auto">
                     <a class="nav-item nav-link" href="details.html">Details</a>
                     <a class="nav-item nav-link active" href="about.html">About</a>
                 </div>
