Added image to the About paged and updated bio.

--- a/about.html
+++ b/about.html
@@ -61,16 +61,19 @@
             <h1>About</h1>
             <div class="row">
                 <div class='col-sm-6'>
-                    <img class="img-thumbnail" src="img/placeholder.jpg" alt="Brandon Tindle Developer Designer">
+                    <img class="img-thumbnail" src="img/me.jpg" alt="Brandon Tindle Developer Designer">
                 </div>
                 <div class='col-sm-6'>
                     <p>Clean, simple and scalable are the hallmarks of my work. Maintaining clean, simple and scalable code allows me to build stable, sustainable applications.</p>
 
                     <p>I am a FULL STACK developer &amp; designer with over eight years of experience building and designing websites, databases, servers, and mobile applications. I have a BFA from The Boston Conservatory. Unsatisfied with the quality of applications built for the theater world, I took matters into my own hands and delved head first into Mobile and Web Design and Development.</p>
 
-                    <p>I completed Stanford University’s iPhone Development courses via iTunes U and devoured every Objective-C book I could find. I now have five applications on the App Store, three of which have been featured by Apple.</p>
+                    <!-- <p>I completed Stanford University’s iPhone Development courses via iTunes U and devoured every Objective-C book I could find. I now have five applications on the App Store, three of which have been featured by Apple.</p> -->
 
-                    <p>I studied the principles of web design and development, colors, layouts, and HTML5!  In 2013, I was awarded the position of Software Project Manager at the prestigious New York Vocal Coaching where I accumulated over 2,000 hours building and designing websites, mobile applications, logo design and branding, and graphics design.</p>
+                    <p>In 2013, I was awarded the position of Software Project Manager at the prestigious New York Vocal Coaching where I accumulated over 2,000 hours building and designing websites, mobile applications, logo design and branding, and graphics design.</p>
+
+                    <p>In 2017, I was hired by the world renowned Massachusetts Institue of Technology (MIT) to design and build a range of websites and scientific components for its DAI-Lab.</p>
+
 
                     <p>This all speaks to my abilities to quickly learn and properly execute new methods and ideas.</p>
                 </div>
