Set SublimeText as selected on load.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <option value=""></option>
                             <option value="atom">Atom</option>
                             <option value="brackets">Brackets</option>
-                            <option value="sublime">Sublime Text</option>
+                            <option value="sublime" selected>Sublime Text</option>
                             <option value="visual_code">Visual Studio Code</option>
                         </select>
                     </div>
@@ -171,7 +171,7 @@ console.log('$1: ', $2);
                             <option value=""></option>
                             <option value="atom">Atom</option>
                             <option value="brackets">Brackets</option>
-                            <option value="sublime">Sublime Text</option>
+                            <option value="sublime" disabled>Sublime Text</option>
                             <option value="visual_code">Visual Studio Code</option>
                         </select>
                     </div>
@@ -184,7 +184,7 @@ console.log('$1: ', $2);
 
                 <div class="col-sm-12">
                     <!-- Submit button -->
-                    <button id="submit-btn" type="submit" class="btn btn-success btn-block">Submit</button>
+                    <button id="submit-btn" type="submit" class="btn btn-success btn-block">Convert</button>
                 </div>
             </form>
 
