--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <!-- Allow user to select From text editor -->
                     <div class="form-group">
                         <label for="convert_from" class="title text-green">FROM</label>
-                        <select id="convert-from" class="form-control" name="convert_from" required>
+                        <select id="convert-from" class="form-control custom-select" name="convert_from" required>
                             <option value=""></option>
                             <option value="atom">Atom</option>
                             <option value="brackets">Brackets</option>
@@ -80,7 +80,7 @@
 
                     <div class="form-group scope-select">
                         <label class="text-white" for="scope_from">Scope/Source</label>
-                        <select class="form-control" name="scope_from">
+                        <select class="form-control custom-select" name="scope_from">
                             <option value=""></option>
                             <option value="source.actionscript.2">ActionScript: source.actionscript.2</option>
                             <option value="source.applescript">AppleScript: source.applescript</option>
@@ -167,7 +167,7 @@ console.log('$1: ', $2);
                     <!-- Allow user to select To text editor -->
                     <div id="from-fg" class="form-group">
                         <label for="convert_to" class="text-blue title">TO</label>
-                        <select id="convert-to" class="form-control" name="convert_to" required>
+                        <select id="convert-to" class="form-control custom-select" name="convert_to" required>
                             <option value=""></option>
                             <option value="atom">Atom</option>
                             <option value="brackets">Brackets</option>
@@ -227,7 +227,7 @@ console.log('$1: ', $2);
         <!-- <script src="js/vendor/jquery-1.11.2.min.js"></script> -->
 
         <!-- <script src="js/vendor/bootstrap.min.js"></script> -->
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script   src="https://code.jquery.com/jquery-3.2.1.js"   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="   crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
