Fixed a bug which caused Atom snippets wrapped in single quotes to fail.

--- a/details.html
+++ b/details.html
@@ -75,7 +75,7 @@
 '.source.js':
     'console.log':
     'prefix': 'log'
-    'body': 'console.log(${1:"crash"});$2'</pre>
+    'body': 'console.log($1);$2'</pre>
                                 </div>
                             </div>
                             <a href="http://flight-manual.atom.io/using-atom/sections/snippets/" target="_blank" class="btn btn-primary">more info</a>
