--- a/details.html
+++ b/details.html
@@ -67,7 +67,7 @@
                         <div class="card-body">
                             <h2 class="card-title">Atom</h2>
                             <p class="card-subtitle mb-2 text-muted">Atom snippets should be formatted using CoffeeScript.</p>
-                            <p>There is a text file in your ~/.atom directory called snippets.cson that contains all your custom snippets that are loaded when you launch Atom. You can also easily open up that file by selecting the Atom > Snippets menu.</p>
+                            <p class="card-text">There is a text file in your ~/.atom directory called snippets.cson that contains all your custom snippets that are loaded when you launch Atom. You can also easily open up that file by selecting the Atom > Snippets menu.</p>
                             <div class="card mb-3">
                                 <div class="card-header">Example</div>
                                 <div class="card-body">
@@ -132,8 +132,8 @@
                     <div id="viscode" class="card mb-5">
                         <div class="card-body">
                             <h2 class="card-title">Visual Studio Code</h2>
+                            <p class="card-text">Snippets are defined in a JSON format and stored in a per user (languageId).json file. For example, Markdown snippets go in a markdown.json file.</p>
                             <p class="card-text">You can define your own snippets for specific languages. To open up a snippet file for editing, open User Snippets under File > Preferences (Code > Preferences on Mac) and select the language for which the snippets should appear.</p>
-                            <p> class="card-text"Snippets are defined in a JSON format and stored in a per user (languageId).json file. For example, Markdown snippets go in a markdown.json file.</p>
                             <div class="card mb-3">
                                 <div class="card-header">Example</div>
                                 <div class="card-body">
